# ai_assistant

./: .dockerignore  Dockerfile  README.md  conversations.db  docker-compose.yml  pyproject.toml
agent_ai/: fine_tune.py  fine_tune_data.jsonl  finetune_data.jsonl  gpt.py  history.py  main.py
agent_ai/crud/: crud.py
agent_ai/database/: fine_tune.docx  knowledge_base.txt
agent_ai/models/: database.py  models.py
agent_ai/schemas/: schemas.py
